--- a/senguo.cc/admin/static/css/admin-marketing.css
+++ b/senguo.cc/admin/static/css/admin-marketing.css
@@ -131,3 +131,4 @@ tr{border-left:1px solid #eee;border-right:1px solid #eee;border-bottom:1px soli
 .charge-btn{width: 85px;display:inline-block;margin-left:15px;font-size: 1px;color: #000;text-align: center;height: 28px;line-height: 28px;border-radius: 2px;}	
 .mode-cm{display:inline-block;border-radius:30px;width:100px;height:32px;position:relative;line-height:30px;font-size:14px;top:-45px;}
 .mode-cm .circle{display:inline-block;width:28px;height:28px;background:#fff;border-radius:50%;position:absolute;top:2px;}
+.discount_close{margin-left: 420px;}
