--- a/senguo.cc/admin/templates/admin/market-base.html
+++ b/senguo.cc/admin/templates/admin/market-base.html
@@ -24,7 +24,7 @@
     <li class="{{love_wall_active}}" id="infoSet"><a href="{{reverse_url('adminMarketing')}}?action=lovewall">告白墙</a></li>
     <li class="{{coupon_active}}" id="coupon"><a href="{{reverse_url('adminMarketing')}}?action=coupon&coupon_type=0">优惠券</a></li>
     <!-- <li class="{{no_auth}}" id="noticeSet"><a href="#">商品预售</a></li> -->
-     <li class="{{discount_active}}" id="discount"><a href="{{reverse_url('DiscountMain')}}?action=discount&descount_status=0"><b class="red-toll1" id="is_balance"></b>限时折扣</a></li>
+     <li class="{{discount_active}}" id="discount"><a href="{{reverse_url('DiscountMain')}}?action=discount&status=0"><b class="red-toll1" id="is_balance"></b>限时折扣</a></li>
 </ul>
 </div>
 {% block setcontent %}{% end %}
