--- a/senguo.cc/admin/templates/admin/discount-edit.html
+++ b/senguo.cc/admin/templates/admin/discount-edit.html
@@ -9,7 +9,7 @@
 <div class="wrap-newcoupon">
     <p class="c333 mt10 choose-text">
         <a href="/discount?action=discount" class="c999 cancel-add-goods go-back">限时折扣</a>
-        <span class="c333"> / 新建折扣商品</span>
+        <span class="c333"> / 编辑折扣商品[{{common_info["id"]}}]</span>
     </p>
 </div>
 <input type="hidden" id="goods" value="{{data1}}"/>
@@ -27,13 +27,13 @@
                 <tr>
                     <td class="">折扣时间</td>
                     <td>
-                        <a href="javascript:;" class="radio radio-active open-single" data-id="0"></a>
+                        <a href="javascript:;" class="radio {%if common_info["discount_way"]==0 %}radio-active{%end%} open-single" data-id="0"></a>
                     </td>
                     <td><span>单次</span></td>
                 </tr>
                 </thead>
             </table>
-            <table class="coupon-tb single-day">
+            <table class="coupon-tb single-day {%if common_info["discount_way"]==1 %}hidden{%end%}">
                 <colgroup>
                     <col width="16%"/>
                     <col width="9%"/>
@@ -68,13 +68,13 @@
                 <tr>
                     <td class=""></td>
                     <td>
-                        <a href="javascript:;" class="radio open-week" data-id="1"></a>
+                        <a href="javascript:;" class="radio open-week {%if common_info["discount_way"]==1 %}radio-active{%end%}" data-id="1"></a>
                     </td>
                     <td><span>开启周期（多选）</span></td>
                 </tr>
                 </thead>
             </table>
-            <table class="coupon-tb week hidden">
+            <table class="coupon-tb week {%if common_info["discount_way"]==0 %}hidden{%end%}">
                 <colgroup>
                     <col width="14%"/>
                     <col width="86%"/>
@@ -82,13 +82,10 @@
                 <thead>
                     <td class=""></td>
                     <td class="change-week">
-                        <a href="javascript:;" class=" week-btn  mt6 mr10" week-id='1'>周一</a>
-                        <a href="javascript:;" class=" week-btn  mt6 mr10"week-id='2'>周二</a>
-                        <a href="javascript:;" class=" week-btn  mt6 mr10"　week-id='3'>周三</a>
-                        <a href="javascript:;" class=" week-btn  mt6 mr10"　week-id='4'>周四</a>
-                        <a href="javascript:;" class=" week-btn  mt6 mr10"　week-id='5'>周五</a>
-                        <a href="javascript:;" class=" week-btn  mt6 mr10"　week-id='6'>周六</a>
-                        <a href="javascript:;" class=" week-btn  mt6 mr10"　week-id='7'>周日</a>
+                    {%set weeks=["","周一","周二","周三","周四","周五","周六","周日"]%}
+                    {%for x in range(1,8)%}
+                        <a href="javascript:;" class=" week-btn  mt6 mr10 {%if x in common_info["weeks"]%}back_green{%end%}" week-id={{x}}>{{weeks[x]}}</a>
+                    {%end%}
                     </td>
                 </thead>
             </table>
@@ -106,7 +103,7 @@
                         <div class=""> 
                              <div class="dropdown slide-down-select w130 mr10 time-btn-width">
                                 <button class="btn btn-default dropdown-toggle area height25 slide-btn" type="button" data-toggle="dropdown">
-                                    <em class="pull-left c333 f-hour" data-id="0" >0</em>
+                                    <em class="pull-left c333 f-hour" data-id={} >0</em>
                                     <span class="caret pull-right no-margin-left rotate0"></span>
                                 </button>
                                 <ul class="dropdown-menu dropdown-menu-right w130 f-discount-hour-items time-btn-width" role="menu" aria-labelledby="dropdownMenu18">
@@ -196,6 +193,7 @@
             </tbody>
             </table>
             <p class="c999 f12 mt6 discount-tip hidden">开始结束时间均为选择的日期当天内的时间段</p>
+            {%for data in discount_items%}
             <table class="coupon-tb discount_item">
                 <colgroup>
                     <col width="16%"/>
@@ -204,17 +202,17 @@
                 </colgroup>
                 <tbody class="to_clone new_tbody">
                 <tr class="">
-                    <td class="ver-top "><span class="ver-5  should_remove">折扣商品<br></span></td>
+                    <td class="ver-top "><span class="ver-5  should_remove {%if discount_items.index(data)>1%}hidden{%end%}">折扣商品<br></span></td>
                     <td class="no_border">
                          <table class="">
-                            <tr><div class="text_gray">商品<span class="goods_number" goods-id="1">1</span></div></tr>
+                            <tr><div class="text_gray">商品<span class="goods_number" goods-id={{data["id"]}}>{{data["id"]}}</span></div></tr>
                             <tr class="no_border" >   
                                 <td>
                                     <div class="iblock">
                                         <span class="mr10 ver7">商品名称</span>
                                         <div class="dropdown slide-down-select w130 mr10 use_group">
                                             <button class="btn btn-default dropdown-toggle area height25 slide-btn" type="button" data-toggle="dropdown">
-                                                <em class="pull-left c333 use_goods_group" data-id="-2">所有分组</em>
+                                                <em class="pull-left c333 use_goods_group" data-id={{data["use_goods_group"]}}>{{data["use_goods_group_text"]}}</em>
                                                 <span class="caret pull-right no-margin-left rotate0"></span>
                                             </button>
                                             <ul class="dropdown-menu dropdown-menu-right w130 use_goods_group_lst" role="menu" aria-labelledby="dropdownMenu18">
@@ -227,7 +225,7 @@
                                         </div>
                                         <div class="dropdown slide-down-select w130 ">
                                             <button class="btn btn-default dropdown-toggle area height25 slide-btn " type="button" data-toggle="dropdown">
-                                                <em class="pull-left c333 use_goods" data-id="-1">所有商品</em>
+                                                <em class="pull-left c333 use_goods" data-id={{data["use_goods"]}}>{{data["use_goods_text"]}}</em>
                                                 <span class="caret pull-right no-margin-left rotate0"></span>
                                             </button>
                                             <ul class="dropdown-menu dropdown-menu-right w130 use_goods_lst" role="menu" aria-labelledby="dropdownMenu18">
@@ -236,28 +234,35 @@
                                     </div>
                                 </td>
                             </tr>
-                            <tr class="charge-type no_border hidden">
-                                <td>原价(多选)<span class='charge_list'></span></td>
+                            <tr class="charge-type no_border {%if data["use_goods"]==-1%}hidden{%end%}">
+                                <td>原价(多选)<span class='charge_list'>
+                                {%set index1=output_data.index({"group_id":data["use_goods_group"],"group_name":data["use_goods_group_text"]})%}
+                                {%set index2=data1[index1].index({"goods_id":data["use_goods"],"goods_name":data["use_goods_text"]})%}
+                                {%for charge in chargetype[index1][index2]%}
+                                    <button class=" charge-btn mt6 mr10 {%if charge["charge_id"] in data["charges"]%}back_green{%end%}" charge_id={{charge["charge_id"]}}>{{charge["charge"]}}</button>
+                                {%end%}
+                                </span></td>
                             </tr>
                             <tr class="no_border">
                                 <td>
-                                   活动折扣<input type="text" class="discount_rate"><span>折</span>
+                                   活动折扣<input type="text" class="discount_rate" value="{{data["discount_rate"]}}"><span>折</span>
                                 </td>
                             </tr>
                         </table>
                     </td>
                     <tr>
                         <td></td>
-                         <td><a href="javascript:;" class=" text_green mt6 mr10 discount-new" >+新建</a><a href="javascript:;" class="  mt6 mr10 discount_delete text_red hidden" >删除</a></td>
+                         <td><a href="javascript:;" class="  mt6 mr10 discount_close text_red " >停用</a></td>
                     </tr>
                 </tr>
                 </tbody>
+                {%end%}
             </table>
         </div>
     </div>
     <div class="wrap-pop-btn wrap-edit-item">
-        <a href="javascript:;" class="ok-btn ok-discount" data-flag="on">确定</a>
-        <a href="javascript:;" class="cancel-btn cancel-new-discount goback">取消</a>
+        <a href="javascript:;" class="ok-btn ok-edit" data-flag="on">确定</a>
+        <a href="javascript:;" class="cancel-btn cancel-new-discount cancel-edit">取消</a>
     </div>
 </div>
 {% end %}
