--- a/senguo.cc/admin/static/css/admin-marketing.css
+++ b/senguo.cc/admin/static/css/admin-marketing.css
@@ -140,4 +140,6 @@ tr{border-left:1px solid #eee;border-right:1px solid #eee;border-bottom:1px soli
 .w110{width: 110px;}
 
 .edit-activity{z-index: 2999;font-size: 16px;}
+.spread-activity{z-index: 2999;font-size: 16px;}
+.stop-activity{z-index: 2999;font-size: 16px;}
 /**/
