--- a/senguo.cc/admin/templates/admin/seckill.html
+++ b/senguo.cc/admin/templates/admin/seckill.html
@@ -65,8 +65,8 @@
                                                                         <td colspan="1">{{data['picked']}} / {{data['ordered']}}</td>
                                                                         <td colspan="1">　　
                                                                                        <a href="javascript:;" class="edit-activity" title="点击编辑此秒杀活动">编辑</a>
-                                                                                       <a href="javascript:;" class="ml10">推广</a>
-                                                                                       <a href="javascript:;" class="ml10">停用</a>
+                                                                                       <a href="javascript:;" class="ml10 spread-activity" title="点击推广此秒杀活动">推广</a>
+                                                                                       <a href="javascript:;" class="ml10 stop-activity" title="点击停用此秒杀活动">停用</a>
                                                                         </td>
                                                           </tr>
                                                           {% end %}
