--- a/senguo.cc/admin/templates/customer/discover.html
+++ b/senguo.cc/admin/templates/customer/discover.html
@@ -13,7 +13,7 @@
 	    <a href="{{reverse_url('ConfessionHome',handler.shop_code)}}" class="text-grey3 confess-wall">
             <span class="pull-right imore"></span>
 	    	<i class="pull-left"></i>
-	    	<span class="pull-left confess-text">告白墙<br><span class="font12 text-grey">看看果友们的真情告白</span></span>
+	    	<span class="pull-left confess-text">告白墙<span class="font12 text-grey ml6">看看果友们的真情告白</span></span>
 	    	<span class="confess-circle circle bg-pink text-white hidden">{{confess_count}}</span>
 	    </a>
     </li>
@@ -24,13 +24,44 @@
         <a href="{% if a==0%}/coupon/profile?action=get_one&coupon_id=-1{% else %}/coupon/profile?action=get_all{% end %}" class="text-grey3 confess-wall">
             <span class="pull-right imore"></span>
             <i class="pull-left"></i>
-            <span class="pull-left confess-text">优惠券<br><span class="font12 text-grey">{% if a== 0%}更多优惠券等你来抢{% else %}{{a}}批优惠券等你来抢{% end %}</span></span>
+            <span class="pull-left confess-text">优惠券<span class="font12 text-grey ml6">{% if a== 0%}更多优惠券等你来抢{% else %}{{a}}批优惠券等你来抢{% end %}</span></span>
             <span class="confess-circle circle bg-pink text-white hidden">{{confess_count}}</span>
         </a>
     </li>
-    {%else%}
     {% end %}
     {%end%}
+    <li class="title clearfix bg-white font14 seckill">
+        <a href="{% if a==0%}/coupon/profile?action=get_one&coupon_id=-1{% else %}/coupon/profile?action=get_all{% end %}" class="text-grey3 confess-wall">
+            <span class="pull-right imore"></span>
+            <i class="pull-left"></i>
+            <span class="pull-left confess-text">秒杀活动<span class="font12 text-grey ml6">15件商品11点大开杀戒</span></span>
+            <span class="confess-circle circle bg-pink text-white hidden">10</span>
+        </a>
+    </li>
+    <li class="title clearfix bg-white font14 discount">
+        <a href="{% if a==0%}/coupon/profile?action=get_one&coupon_id=-1{% else %}/coupon/profile?action=get_all{% end %}" class="text-grey3 confess-wall">
+            <span class="pull-right imore"></span>
+            <i class="pull-left"></i>
+            <span class="pull-left confess-text">限时折扣<span class="font12 text-grey ml6">10余件商品惊喜价大放送</span></span>
+            <span class="confess-circle circle bg-pink text-white hidden">10</span>
+        </a>
+    </li>
+    <li class="title clearfix bg-white font14 gbuy">
+        <a href="javascript:;" class="text-grey3 confess-wall">
+            <span class="pull-right imore"></span>
+            <i class="pull-left"></i>
+            <span class="pull-left confess-text">团购<span class="font12 text-grey ml6">5件商品等你一起团，购任性</span></span>
+            <span class="confess-circle circle bg-pink text-white hidden">10</span>
+        </a>
+    </li>
+    <li class="title clearfix bg-white font14 presell">
+        <a href="{% if a==0%}/coupon/profile?action=get_one&coupon_id=-1{% else %}/coupon/profile?action=get_all{% end %}" class="text-grey3 confess-wall">
+            <span class="pull-right imore"></span>
+            <i class="pull-left"></i>
+            <span class="pull-left confess-text">预售<span class="font12 text-grey ml6">10余件水果抢先看</span></span>
+            <span class="confess-circle circle bg-pink text-white hidden">10</span>
+        </a>
+    </li>
 {% end %}
 </ul>
 {% end %}
