--- a/senguo.cc/admin/templates/customer/profile.html
+++ b/senguo.cc/admin/templates/customer/profile.html
@@ -22,7 +22,7 @@
             <div class="info-con h19">
                 <span class="title pull-left text-grey3">昵称</span>
                 <i class="arr-right pull-right"></i>
-                <span class="nickname pull-right s1" id="usernickName">{{current_user.accountinfo.nickname or '无'}}</span>
+                <span class="nickname pull-right s1" id="usernickName1">{{current_user.accountinfo.nickname or '无'}}</span>
             </div>
         </li>
         </a>
