text forbid phone webbrower

--- a/senguo.cc/admin/templates/admin/goods-all.html
+++ b/senguo.cc/admin/templates/admin/goods-all.html
@@ -250,6 +250,12 @@
                         <li role="presentation">
                             <a class="item" href="javascript:;" data-id="11">包</a>
                         </li>
+                        <li role="presentation">
+                            <a class="item" href="javascript:;" data-id="12">今天价</a>
+                        </li>
+                        <li role="presentation">
+                            <a class="item" href="javascript:;" data-id="13">明天价</a>
+                        </li>
                     </ul>
                 </div>
             </div>
