--- a/senguo.cc/admin/templates/m-admin/goods-add.html
+++ b/senguo.cc/admin/templates/m-admin/goods-add.html
@@ -217,6 +217,8 @@
             <li data-id="9" class="">件</li>
             <li data-id="10" class="">筐</li>
             <li data-id="11" class="">包</li>
+            <li data-id="12" class="">今天价</li>
+            <li data-id="13" class="">明天价</li>
         </ul>
         <div class="wrap-bbtns txt-center">
             <a href="javascript:;" class="ok-bbtn dgreen" id="sure_unit">完成</a>
