--- a/senguo.cc/admin/templates/admin/home.html
+++ b/senguo.cc/admin/templates/admin/home.html
@@ -12,7 +12,7 @@
             </a>
         </div>
         <div class="pull-right title-style2  new-item">
-            <a href="{{reverse_url('adminStaffFollower')}}?action=all&&order_by=time&&page=0">
+            <a href="{{reverse_url('adminStaffFollower')}}">
                 <span class="new-user"><i></i><b id="new_follower_sum">{{new_follower_sum}}</b></span>
                 <p>新增用户</p>
             </a>
@@ -27,7 +27,7 @@
             </a>
         </div>
         <div class="pull-right title-style2 item">
-            <a href="{{reverse_url('adminStaffFollower')}}?action=all&&order_by=time&&page=0">
+            <a href="{{reverse_url('adminStaffFollower')}}">
                 <span class="total-user"><i></i><b id="follower_sum">{{follower_sum}}</b></span>
                 <p>总用户数</p>
             </a>
