--- a/senguo.cc/admin/templates/admin/seckill-detail.html
+++ b/senguo.cc/admin/templates/admin/seckill-detail.html
@@ -10,7 +10,7 @@
 <div class="action-div hidden" data-value="{{action}}"></div>
 <div class="font14">　
                <p class="c333 mt10 choose-text">
-                             <a href="{{reverse_url('adminMarketingSeckill')}}?action=seckill&page=0&status=1" class="c999 cancel-add-goods">商品秒杀</a>
+                             <a href="{{reverse_url('adminMarketingSeckill')}}?action=seckill&page=0&status={{status}}" class="c999 cancel-add-goods">商品秒杀</a>
                              <span class="c333"> / 秒杀详情</span>
                </p>
 </div>
