--- a/senguo.cc/admin/templates/customer/discover.html
+++ b/senguo.cc/admin/templates/customer/discover.html
@@ -29,6 +29,8 @@
     </li>
     {% end %}
     {%end%}
+
+    {% if seckill_active == 1%}
     <li class="title clearfix bg-white font14 seckill">
         <a href="{% if a==0%}/coupon/profile?action=get_one&coupon_id=-1{% else %}/coupon/profile?action=get_all{% end %}" class="text-grey3 confess-wall">
             <span class="pull-right imore"></span>
@@ -37,6 +39,8 @@
             <span class="confess-circle circle bg-pink text-white hidden">10</span>
         </a>
     </li>
+    {% end %}
+
     <li class="title clearfix bg-white font14 discount">
         <a href="{% if a==0%}/coupon/profile?action=get_one&coupon_id=-1{% else %}/coupon/profile?action=get_all{% end %}" class="text-grey3 confess-wall">
             <span class="pull-right imore"></span>
