--- a/senguo.cc/admin/templates/customer/search-goods-list.html
+++ b/senguo.cc/admin/templates/customer/search-goods-list.html
@@ -5,10 +5,8 @@
 <link rel="stylesheet" href="{{static_url('css/market-home.css')}}"/>
 <link rel="stylesheet" href="{{static_url('css/fruit-color.css')}}"/>
 {% end %}
-{% block header%}
-
-{% end%}
-
+{% block header%}{% end%}
+{% block topHeader %}{% end%}
 {% block content%}
 <input type="hidden" id="shop_code" value="{{handler.shop_code}}"/>
 <header class="herder bg-green text-white text-center">
