--- a/senguo.cc/admin/static/css/mlogin_global.css
+++ b/senguo.cc/admin/static/css/mlogin_global.css
@@ -85,7 +85,7 @@ button:focus{outline:0;}
 .text-grayca{color:#cacaca;}
 .text-grayb1{color:#B1B1B1;}
 .bg-white{background:#fff;}
-.bg-green{background:#80de9e !important;}
+.bg-green{background:#80de9e;}
 .bg-grey{background:#ccc;}
 .font12{font-size:12px;}
 .font14{font-size:14px;}
