--- a/senguo.cc/admin/static/css/market-home.css
+++ b/senguo.cc/admin/static/css/market-home.css
@@ -122,6 +122,11 @@
 .market .market-price{text-decoration:line-through;}
 .desaturate .bg{background:#FCFCFC !important;}
 .desaturate .color{color:#757575 !important;}
+.status-goods{position: absolute;width: 46px;height: 46px;display: inline-block;background-repeat: no-repeat;background-size: 46px;top: 2px;left: 2px;}
+.status-seckill{background-image: url('/static/images/status_seckill.png');}
+.status-discount{background-image: url('/static/images/status_discount.png');}
+.seckill-btn{width: 60px;height: 28px;line-height: 28px;float:right;text-align: center;color: #fff;font-weight: bold;border-radius: 4px;background-color: #FF9800;}
+.seckill-btn-yes{background-color: #ddd;}
 /*swiper*/
 .img-list{width: 100%;height: 0;padding-bottom: 40%;position: relative;background-color: #fff;}
 .swiper-container{width: 100%;height: 0;padding-bottom: 40%;overflow: hidden;position: relative;}
