--- a/senguo.cc/admin/templates/apply/home.html
+++ b/senguo.cc/admin/templates/apply/home.html
@@ -11,6 +11,10 @@
         <p class="txt-center cfff mt10">{{nickname}}</p>
     </div>
     <div class="wrap-tb">
+    <div   style="margin-left:39%;">
+                    <script type="text/javascript" src="{{url}}"></script>
+        </div>
+
         <table class="tb-home">
             <colgroup>
                 <col width="26%"/>
@@ -35,6 +39,7 @@
                 <td class="txt-ar c333">短信验证码</td>
                 <td><input type="tel" class="home-ipt ml10" id="code"/></td>
             </tr>
+
         </table>
         <div class="txt-center mt40">
             <a href="javascript:;" class="go-btn be-shoper" id="commit">成为卖家</a><br>
