--- a/senguo.cc/admin/templates/apply/home.html
+++ b/senguo.cc/admin/templates/apply/home.html
@@ -11,9 +11,7 @@
         <p class="txt-center cfff mt10">{{nickname}}</p>
     </div>
     <div class="wrap-tb">
-    <div   style="margin-left:39%;">
-                    <script type="text/javascript" src="{{url}}"></script>
-        </div>
+       
 
         <table class="tb-home">
             <colgroup>
@@ -28,6 +26,13 @@
                 <td><input type="text" class="home-ipt ml10" id="wx-username" placeholder="请输入个人微信号" value="{{wx_username or ''}}" /></td>
             </tr>
             <tr><td></td><td class="c999">(填写个人微信号，方便我们将您加入卖家交流群，获得更多行业信息与资源)</td></tr>
+            <tr>
+               <td colspan="2">
+                    <div   style="margin:0 auto;width:300px;">
+                        <script type="text/javascript" src="{{url}}"></script>
+                    </div>
+               </td> 
+            </tr>
             <tr>
                 <td class="txt-ar c333">手机号</td>
                 <td>
