--- a/senguo.cc/admin/static/css/seckill.css
+++ b/senguo.cc/admin/static/css/seckill.css
@@ -35,7 +35,8 @@ body{background-color: #f5f5f5;}
 .seckill-btn-more{position:absolute;cursor:pointer;right:0;bottom:0;width: 70px;height: 28px;line-height: 28px;text-align: center;border-radius: 4px;color: #FF9800;border: 1px solid #ff9800;-webkit-box-sizing: border-box;}
 .seckill-btn-first{position:absolute;cursor:pointer;right:0;bottom:14px;width: 70px;height: 28px;line-height: 28px;text-align: center;border-radius: 4px;color: #59D5AA;border: 1px solid #59D5AA;-webkit-box-sizing: border-box;}
 .go-cart{position: fixed;display: block;right: 20px;bottom:40px;background-color: #33CC66;width: 40px;height: 40px;border-radius: 50%;background-image: url('/static/images/goodsdetail_cart.png');background-size: 24px;background-position: center center;}
-.cart-num{display: inline-block;position: absolute;width: 16px;height: 16px;line-height:16px;text-align:center;font-size:12px;background-color: #FF9800;color: #fff;border-radius: 50%;right: -5px;top: 6px;}
+.cart-num{display: inline-block;position: absolute;width: 16px;height: 16px;line-height:16px;text-align:center;font-size:12px;background-color: #FF9800;color: #fff;border-radius: 50%;right: -5px;top: 6px;-webkit-transition:all .2s ease-in-out;}
+.origin-cart{right: 80px;top: -80px;width: 0;height: 0;}
 /*折扣*/
 .wrap-operate{position: absolute;right:14px;bottom:10px;width: 70px;height: 28px;}
 .num-txt{display: block;width: 70px;height: 28px;font-weight:bold;line-height: 28px;text-align: center;color: #59D5AA;background-color: #e7e7e7;}
