--- a/senguo.cc/admin/templates/seckill/seckill.html
+++ b/senguo.cc/admin/templates/seckill/seckill.html
@@ -3,7 +3,7 @@
 {% block head %}
 <div class="header">
     <a href="javascript:;" class="back goback"></a>
-    <span>秒杀活动</span>
+    <span id="seckill">秒杀活动</span>
 </div>
 {% end %}
 {% block content %}
@@ -18,7 +18,7 @@
                 <ul class="stime-list fl">
                     {% for j in range(len(sec[1])) %}
                     {% set time = sec[1][j] %}
-                    <li class="{% if i==0 and j==0 %}active{% end %}">
+                    <li class="{% if i==0 and j==0 %}active{% end %}" data-id="{{time['activity_id']}}" data-start="{{time['start_time']}}" data-continue="{{time['continue_time']}}">
                         <span>{{time['start_time_text']}}</span>
                         <i class="c-time {% if i==0 and j==0 %}cur-time{% end %}"></i>
                     </li>
@@ -28,82 +28,32 @@
             {% end %}
         </ul>
     </div>
-    <div class="show-time-box">
+    <div class="show-time-box seckill-ing">
         <span class="time-status">抢购中</span>
-        <span class="ml4">距结束&nbsp;<span id="day"></span><span id="hour"></span><span id="minute"></span><span id="second"></span></span>
+        <span class="ml4">距结束&nbsp;<span class="day"></span><span class="hour"></span><span class="minute"></span><span class="second"></span></span>
     </div>
     <div class="show-time-box no-seckill-time hide">
         <span class="time-status">蓄势待发</span>
-        <span class="ml4">距开始00:01:59</span>
+        <span class="ml4">距开始&nbsp;<span class="day"></span><span class="hour"></span><span class="minute"></span><span class="second"></span></span>
     </div>
     <ul class="nm-list" id="seckill_list">
-        <li>
-            <dl class="nm-dl">
-                <dt>
-                    <img src="/static/images/TDSG.png" alt="商品图片"/>
-                    <div class="cover-img"></div>
-                </dt>
-                <dd>
-                    <span class="tr-num">还剩12份</span>
-                    <p class="c333 clip nm-name p0">水晶大葡萄，非常好吃哦</p>
-                    <p class="no-goods mt20">
-                        <span class="price-bo">1元/kg</span>
-                        <span class="price-tip">省7元</span>
-                    </p>
-                    <span class="seckill-btn hide">抢!</span>
-                    <span class="seckill-btn-more">更多惊喜</span>
-                </dd>
-            </dl>
-        </li>
-        <li>
-            <dl class="nm-dl">
-                <dt>
-                    <img src="/static/images/TDSG.png" alt="商品图片"/>
-                    <div class="cover-img hide"></div>
-                </dt>
-                <dd>
-                    <span class="tr-num">还剩12份</span>
-                    <p class="c333 clip nm-name">水晶大葡萄，非常好吃哦</p>
-                    <p class="mt20">
-                        <span class="price-bo">1元/kg</span>
-                        <span class="price-tip">省7元</span>
-                    </p>
-                    <span class="seckill-btn">抢!</span>
-                    <span class="seckill-btn-more hide">更多惊喜</span>
-                </dd>
-            </dl>
-        </li>
-        <li>
-            <dl class="nm-dl">
-                <dt>
-                    <img src="/static/images/TDSG.png" alt="商品图片"/>
-                <div class="cover-img hide"></div>
-                </dt>
-                <dd>
-                    <p class="c333 clip nm-name">水晶大葡萄，非常好吃哦</p>
-                    <p class="mt20">
-                        <span class="price-bo">1元/kg</span>
-                        <span class="price-tip">省7元</span>
-                    </p>
-                    <span class="seckill-btn-first">抢先看</span>
-                </dd>
-            </dl>
-        </li>
+
     </ul>
+    <p class="no-result mt10 hide">该活动没有商品了~~</p>
 </div>
 <a href="/customer/cart/zhoubing" class="go-cart">
-    <span class="cart-num">10</span>
+    <span class="cart-num origin-cart hide">1</span>
 </a>
 <ul class="hide" id="seckill-item">
     <li>
         <dl class="nm-dl">
             <dt>
                 <img class="image" src="" alt="商品图片"/>
-            <div class="cover-img"></div>
+                <div class="cover-img hide"></div>
             </dt>
             <dd>
                 <span class="tr-num">还剩<span class="store-num"></span>份</span>
-                <p class="c333 clip nm-name p0">水晶大葡萄，非常好吃哦</p>
+                <p class="c333 clip nm-name p0"></p>
                 <p class="no-goods mt20">
                     <span class="price-bo">1元/kg</span>
                     <span class="price-tip">省<span class="price-dif"></span>元</span>
