--- a/senguo.cc/admin/templates/admin/seckill.html
+++ b/senguo.cc/admin/templates/admin/seckill.html
@@ -75,13 +75,13 @@
                                                                                               </div>
                                                                                               <p class="er-text">活动链接</p>
                                                                                               <div class="wrap-ipt">
-                                                                                                     <input type="text" class="sw-link-txt" value="http://www.baidu.com" disabled="">
+                                                                                                     <input type="text" class="sw-link-txt" value="http://zone.senguo.cc:8887/seckill/czneau?activity_id={{data['activity_id']}}" disabled="">
                                                                                                      <input type="button" class="sw-link-copy" value="复制链接">
                                                                                               </div>
                                                                                               <div class="wrap-er group">
                                                                                                      <img class="er-logo" src="/static/images/favicon.ico" alt="">
                                                                                                      <div class="er-text lh80 fl">链接二维码</div>
-                                                                                                     <div class="er-img fl er-code-img" title="http://senguo.cc/zhoubing/goods/22"></div>
+                                                                                                     <div class="er-img fl er-code-img" title="http://zone.senguo.cc:8887/seckill/czneau?activity_id={{data['activity_id']}}"></div>
                                                                                               </div>
                                                                                        </div>
                                                                         </td>
