--- a/senguo.cc/admin/templates/m-admin/shop-set-notice.html
+++ b/senguo.cc/admin/templates/m-admin/shop-set-notice.html
@@ -4,7 +4,7 @@
 {% end %}
 {% block header %}
 <div class="header">
-    <a href="{{reverse_url('MadminSet')}}" class="back goback">返回</a>
+    <a href="{{reverse_url('MadminSet')}}" class="back">返回</a>
     <span>商城公告</span>
 </div>
 {% end %}
