rm mamdin 未完成功能显示

--- a/senguo.cc/admin/templates/m-admin/shop-profile.html
+++ b/senguo.cc/admin/templates/m-admin/shop-profile.html
@@ -59,8 +59,8 @@
         </dl>
     </div>
     <div class="white-box pm8">
-        <p class="box-title developing">
-            <a href="javascript:;" class="more fr">更多</a>
+        <p class="box-title">
+            <!-- <a href="javascript:;" class="more fr">更多</a> -->
             <span class="box-icon data-stat">数据统计</span>
         </p>
         <ul class="group stat-list">
@@ -114,13 +114,13 @@
                 <span class="box-icon data-goods">商品管理</span>
             </p>
         </a>
-        <a href="javascript:;"  class="developing">
+        <!-- <a href="javascript:;">
             <p class="box-title btf5">
                 <span class="more fr">&nbsp;</span>
                 <span class="fr c000">{{staff_count}}</span>
                 <span class="box-icon data-staff">员工管理</span>
             </p>
-        </a>
+        </a> -->
         <a href="/madmin/user">
             <p class="box-title btf5">
                 <span class="more fr">&nbsp;</span>
