--- a/senguo.cc/admin/static/css/seckill.css
+++ b/senguo.cc/admin/static/css/seckill.css
@@ -9,6 +9,7 @@ body{background-color: #f5f5f5;}
 .seckill-time-list>li{display:inline-block;white-space: nowrap;}
 .sp-date{display:inline-block;position:relative;float:left;background-color: #D5F3E9;color: #429C7C;width: 60px;font-size: 12px;height: 28px;line-height: 28px;text-align: center;}
 .tri-r{position: absolute;display: inline-block;border: 5px solid transparent;border-left-color: #ABE7D2;left: 100%;top: 10px;}
+.stime-list{display: inline-block;}
 .stime-list>li{width: 70px;float:left;-webkit-box-sizing: border-box;text-align: center;height: 28px;line-height: 28px;color: #666;cursor: pointer;}
 .c-time{display: none;width: 14px;height: 14px;background-image: url('/static/images/i_time.png');background-position: 0 -18px;background-size: 14px;vertical-align: middle;}
 .cur-time{display: inline-block;}
@@ -74,7 +75,9 @@ body{background-color: #f5f5f5;}
 /*预售*/
 .pre-price{position: absolute;bottom:18px;left: 76px;-webkit-transform:scale(.9);}
 
-
+@media screen and (min-width: 801px) {
+    .c-time{background-position: 0 -19px;}
+}
 
 
 
