--- a/senguo.cc/admin/templates/seckill/discount.html
+++ b/senguo.cc/admin/templates/seckill/discount.html
@@ -2,8 +2,8 @@
 {% block title %}限时折扣{% end %}
 {% block head %}
 <div class="header">
-    <a href="javascript:;" class="back goback"></a>
-    <span>限时折扣</span>
+    <a href="/customer/discover/{{shop_code}}" class="back"></a>
+    <span id="discount">限时折扣</span>
 </div>
 {% end %}
 {% block content %}
@@ -75,10 +75,29 @@
     </ul>
 </div>
 <a href="javascript:;" class="go-cart">
-    <span class="cart-num">10</span>
+    <span class="cart-num  origin-cart hide">1</span>
 </a>
-<ul class="hide" id="seckill-item">
-
+<ul class="hide" id="discount-item">
+    <li>
+        <dl class="nm-dl">
+            <dt>
+                <img src="/static/images/TDSG.png" alt="商品图片"/>
+            <div class="cover-img"></div>
+            </dt>
+            <dd>
+                <p class="c333 clip nm-name pt0">水晶大葡萄，非常好吃哦</p>
+                <p class="no-goods mt20">
+                    <span class="price-bo">1元/kg</span>
+                    <span class="price-tip">8折</span>
+                </p>
+                <div class="wrap-operate" data-num="5">
+                    <span class="roll-btn minus-btn">-</span>
+                    <span class="num-txt">5</span>
+                    <span class="roll-btn add-btn">+</span>
+                </div>
+            </dd>
+        </dl>
+    </li>
 </ul>
 {% end %}
 {% block bottom %}
